--- a/src/application/Application.fxml
+++ b/src/application/Application.fxml
@@ -19,7 +19,7 @@
       <Region prefHeight="75.0" prefWidth="1280.0" />
       <ImageView fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../NBC_Superstore.png" />
+            <Image url="@../../logo.jpeg" />
          </image>
       </ImageView>
       <Region prefHeight="111.0" prefWidth="1280.0" />
